[Misc] Migrate DefaultTranslationBundleContextTest to junit 5